--- a/src/components/courses/Courses.css
+++ b/src/components/courses/Courses.css
@@ -61,6 +61,7 @@
     border-radius: 30px;
     background-color: #ffffff;
     gap: 12px;
+    cursor: pointer;
   }
   .transparent-button img {
     display: inline-block;
@@ -78,15 +79,15 @@
     gap: 20px;
   }
   .cover-image {
-    border-radius: 8px;
+    border-radius: 8px !important;
   }
 
   .fourth-button.read {
     width: 100%;
+    cursor: pointer;
   }
-  .explore-button-top{
+  .explore-button-top {
     margin-top: 20px;
-
   }
   .mobile-wrapper {
     position: relative;
@@ -103,13 +104,15 @@
     /* margin-top: 20px; */
   }
   .search-button-text {
-    /* padding-right: 6rem; */
-    justify-content: center;
+    width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     outline: none;
     border: none;
     background: transparent;
     font-size: 16px;
+    margin-left: 8px;
   }
   .transparent-button img {
     display: inline-block;
@@ -122,6 +125,7 @@
   }
   .fourth-button.read {
     width: 100%;
+    cursor: pointer;
   }
   .suggestions-list {
     position: absolute;
@@ -253,6 +257,7 @@
     border-radius: 30px;
     background-color: #ffffff;
     gap: 12px;
+    cursor: pointer;
   }
   .transparent-button img {
     display: inline-block;
@@ -270,11 +275,12 @@
     gap: 20px;
   }
   .cover-image {
-    border-radius: 8px;
+    border-radius: 8px !important;
   }
 
   .fourth-button.read {
     width: 100%;
+    cursor: pointer;
   }
   .mobile-wrapper {
     position: relative;
@@ -291,13 +297,15 @@
     margin-top: 20px;
   }
   .search-button-text {
-    /* padding-right: 6rem; */
-    justify-content: center;
+    width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     outline: none;
     border: none;
     background: transparent;
     font-size: 16px;
+    margin-left: 8px;
   }
   .transparent-button img {
     display: inline-block;
@@ -310,6 +318,7 @@
   }
   .fourth-button.read {
     width: 100%;
+    cursor: pointer;
   }
   .suggestions-list {
     position: absolute;
@@ -439,6 +448,7 @@
     background-color: #ffffff;
     align-items: center;
     gap: 12px;
+    cursor: pointer;
   }
   .transparent-button img {
     display: inline-block;
@@ -456,11 +466,12 @@
     gap: 20px;
   }
   .cover-image {
-    border-radius: 8px;
+    border-radius: 8px !important;
   }
 
   .fourth-button.read {
     width: 100%;
+    cursor: pointer;
   }
   .search-wrapper {
     position: relative;
@@ -476,13 +487,15 @@
     margin-top: 20px;
   }
   .search-button-text {
-    /* padding-right: 6rem; */
-    justify-content: center;
+    width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     outline: none;
     border: none;
     background: transparent;
     font-size: 16px;
+    margin-left: 8px;
   }
   .transparent-button img {
     display: inline-block;
@@ -495,6 +508,7 @@
   }
   .fourth-button.read {
     width: 100%;
+    cursor: pointer;
   }
   .suggestions-list {
     position: absolute;
@@ -567,7 +581,7 @@
     font-weight: 400;
     padding: 2px;
   }
-/* .explore-button-top{
+  /* .explore-button-top{
 
   } */
   .course-desc {
@@ -597,6 +611,7 @@
     border-radius: 30px;
     gap: 12px;
     background-color: #ffffff;
+    cursor: pointer;
   }
   .transparent-button img {
     display: inline-block;
@@ -614,13 +629,13 @@
     gap: 20px;
   }
   .cover-image {
-    border-radius: 8px;
+    border-radius: 8px !important;
   }
 
   .fourth-button.read {
     width: 100%;
-        margin-top: 20px;
-
+    margin-top: 20px;
+    cursor: pointer;
   }
   .search-wrapper {
     position: relative;
@@ -636,13 +651,15 @@
     margin-top: 20px;
   }
   .search-button-text {
-    padding-right: 6rem;
-    justify-content: center;
+    width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     outline: none;
     border: none;
     background: transparent;
     font-size: 16px;
+    margin-left: 8px;
   }
   .transparent-button img {
     display: inline-block;
@@ -653,7 +670,7 @@
     background-color: #841d26;
     object-fit: contain;
   }
- 
+
   .suggestions-list {
     position: absolute;
     top: 100%;
@@ -758,6 +775,7 @@
     border-radius: 30px;
     background-color: #ffffff;
     gap: 12px;
+    cursor: pointer;
   }
 
   .ant-card-body {
@@ -767,7 +785,7 @@
     gap: 20px;
   }
   .cover-image {
-    border-radius: 8px;
+    border-radius: 8px !important;
   }
   .button-text {
     justify-content: center;
@@ -793,7 +811,7 @@
     cursor: pointer;
     margin-top: 20px;
   }
-  .search-button-text {
+  /* .search-button-text {
     padding-right: 6rem;
     justify-content: center;
     display: flex;
@@ -801,7 +819,19 @@
     border: none;
     background: transparent;
     font-size: 16px;
+  } */
+  .search-button-text {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: none;
+    border: none;
+    background: transparent;
+    font-size: 16px;
+    margin-left: 8px;
   }
+
   .transparent-button img {
     display: inline-block;
     border-radius: 50%;
@@ -813,6 +843,7 @@
   }
   .fourth-button.read {
     width: 100%;
+    cursor: pointer;
   }
   .suggestions-list {
     position: absolute;
