policy and terms page added

--- a/src/components/EnquireSection/enquireSection.css
+++ b/src/components/EnquireSection/enquireSection.css
@@ -932,6 +932,9 @@
     align-items: center;
     /* justify-content: space-between; */
   }
+  .main-fee-deatils{
+    justify-content: space-around;
+  }
 
   .title-logo-main {
     align-items: center;
