--- a/src/components/feedback/feedbacksection.css
+++ b/src/components/feedback/feedbacksection.css
@@ -1,5 +1,3 @@
-
-
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .feedback-main {
@@ -12,7 +10,7 @@
     gap: 55px;
     padding-bottom: 5%;
   }
-  .next-and-pre-buttons{
+  .next-and-pre-buttons {
     display: none;
   }
   .feeback-headers {
@@ -65,7 +63,7 @@
   /* .secondary-heading.with-padding {
     padding: 20px;
   } */
-  
+
   .card-1 {
     background-color: #ffffff;
     border-radius: 5px;
@@ -116,8 +114,9 @@
     display: none;
   }
 
-  .feedback-inside-gap {
+  .secondary-paragraph.feedback-inside-gap {
     padding: 15px 10px;
+    font-size: 14px;
   }
 
   .feedback-name-gap {
@@ -152,11 +151,11 @@
 
   .next-button {
     left: 12%;
-    top: -15%;
+    top: -12%;
   }
 
   .prev-button {
-    top: -15%;
+    top: -12%;
     left: -2.5%;
   }
 
@@ -166,8 +165,6 @@
     gap: 20px;
     align-items: start;
     justify-content: start;
-
-
   }
 }
 
@@ -528,7 +525,6 @@
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-
   /* .feedback-main {
     width: 100%;
     background-color: #f3e8ea;
@@ -623,7 +619,6 @@
     margin-top: 3%;
     padding: 10px;
     gap: 15px;
-
   }
 
   .primary-heading-and-button {
@@ -709,8 +704,9 @@
     display: none;
   }
 
-  .feedback-inside-gap {
+  .secondary-paragraph.feedback-inside-gap {
     padding: 15px 10px;
+    font-size: large;
   }
 
   .feedback-name-gap {
@@ -759,12 +755,11 @@
     gap: 20px;
     align-items: start;
     justify-content: start;
-
   }
   .next-and-pre-buttons {
     display: none;
   }
-    .feedback-cards .slick-track {
+  .feedback-cards .slick-track {
     display: flex !important;
     background-color: #f3e8ea !important;
     gap: 50px;
@@ -778,7 +773,7 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    .feedback-main {
+  .feedback-main {
     width: 100%;
     background-color: #f3e8ea;
     display: flex;
@@ -804,11 +799,10 @@
   .second-main {
     width: 47%;
   }
-   .primary-heading-and-button{
-
+  .primary-heading-and-button {
     width: 40%;
   }
-  .next-and-pre-buttons{
+  .next-and-pre-buttons {
     padding: 20px 0px;
     display: flex;
     flex-grow: row;
@@ -898,10 +892,9 @@
     width: 100% !important;
     gap: 0;
   }
-  .next-and-pre-buttons-mobile{
+  .next-and-pre-buttons-mobile {
     display: none;
   }
-  
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -938,9 +931,9 @@
     background-color: white;
     margin-left: 10px;
   }
-  
+
   .primary-heading-and-button,
-  .second-main{
+  .second-main {
     width: 45%;
   }
   .carosel-inner {
@@ -990,7 +983,7 @@
   }
 
   .next-button {
-    left: 10%;
+    left: 12%;
     /* top: -10%; */
   }
 
@@ -1018,8 +1011,6 @@
     gap: 0;
   }
 }
-
-
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
@@ -1106,12 +1097,12 @@
   }
 
   .next-button {
-    left: 9% ;
-    top: -10%;
+    left: 9%;
+    top: -12%;
   }
 
   .prev-button {
-    top: -10%;
+    top: -12%;
     left: 2.8%;
   }
 
@@ -1133,5 +1124,3 @@
     width: 100% !important;
   }
 }
-
-
