--- a/src/index.css
+++ b/src/index.css
@@ -95,8 +95,8 @@
   }
   .secondary-paragraph {
     font-size: 14px;
-    font-weight: 500;
-    line-height: var(--secondary-paragraph-line-height);
+    font-weight: 400;
+    /* line-height: var(--secondary-paragraph-line-height); */
     color: var(--primary-heading-colour);
     font-family: var(--primary-font-family);
   }
