--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 30px;
-    gap: 10px; /* space between FAQ items */
+    gap: 20px; /* space between FAQ items */
     border-top: none;
     font-family: "Montserrat", sans-serif;
   }
@@ -85,7 +85,7 @@
   .faq-container {
     display: grid;
     padding: 40px 70px;
-    grid-template-columns: 1fr 1.5fr;
+    /* grid-template-columns: 1fr 1.5fr; */
     gap: 30px;
     /* overflow: hidden; */
   }
@@ -192,4 +192,26 @@
 
 .faq-answer {
   transition: all 1s ease-in-out;
+}
+
+.faq-answer-wrapper {
+  overflow: hidden;
+  transition: max-height 0.4s ease-in-out, opacity 0.4s ease-in-out;
+  max-height: 0px;
+  opacity: 0.5;
+}
+
+.faq-answer-wrapper.open {
+  max-height: 400vh; 
+  opacity: 1;
+}
+.faq-icon {
+  transition: transform 0.3s ease-in-out;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.faq-icon.rotate {
+  transform: rotate(180deg);
 }
