--- a/src/components/feehoemsection/feehome.css
+++ b/src/components/feehoemsection/feehome.css
@@ -3,7 +3,7 @@
 @media only screen and (max-width: 600px) {
   .hero-slide {
     width: 100%;
-    height: 600px;
+    height: auto;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -98,7 +98,7 @@
 @media only screen and (min-width: 600px) {
   .hero-slide {
     width: 100%;
-    height: 600px;
+    height: 500px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -193,7 +193,7 @@
 @media only screen and (min-width: 768px) {
   .hero-slide {
     width: 100%;
-    height: 700px;
+    height: 500px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
