--- a/src/components/heroSection/heroSetcion.css
+++ b/src/components/heroSection/heroSetcion.css
@@ -1,7 +1,7 @@
 @media screen and (max-width :600px) {
   .hero-slide {
     width: 100%;
-    height: 600px;
+    height: 60vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -75,7 +75,7 @@
 @media screen and (min-width : 600px) {
   .hero-slide {
     width: 100%;
-    height: 600px;
+    height: 60vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
