--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -7,11 +7,11 @@
   }
 
   .content-part1 {
-    padding: 20px;
+    padding: 20px 0px;
     position: relative;
   }
   .content-part2 {
-    padding: 20px;
+    padding: 20px 0px;
   }
 
   .secondary-arrow-styles {
