--- a/src/components/infiniteSection/infinitecompo.css
+++ b/src/components/infiniteSection/infinitecompo.css
@@ -32,6 +32,9 @@
         &:nth-child(4) {
       margin-top: 25px;
     }
+        &:nth-child(6) {
+      margin-top: 35px;
+    }
   
 }
   
@@ -79,6 +82,9 @@
         &:nth-child(4) {
       margin-top: 25px;
     }
+        &:nth-child(6) {
+      margin-top: 35px;
+    }
 }
   
 @keyframes scrolling {
@@ -123,6 +129,9 @@
       margin-top: 35px;
     }
         &:nth-child(4) {
+      margin-top: 35px;
+    }
+        &:nth-child(6) {
       margin-top: 35px;
     }
 }
@@ -173,6 +182,9 @@
         &:nth-child(4) {
       margin-top: 35px;
     }
+        &:nth-child(6) {
+      margin-top: 35px;
+    }
 
 }
   
@@ -219,6 +231,10 @@
       margin-top: 35px;
     }
         &:nth-child(4) {
+      margin-top: 35px;
+    }
+    
+        &:nth-child(6) {
       margin-top: 35px;
     }
 
