--- a/src/components/rednavBar/rednav.css
+++ b/src/components/rednavBar/rednav.css
@@ -29,6 +29,9 @@
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+  .red-head-mobile {
+    max-width: 70%;
+  }
   .red-head, .red-head-mobile {
     display: none;
   }
@@ -45,16 +48,16 @@
     align-items: center;
     /* max-width: 1200px;
     margin: 0 auto; */
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
   }
   .welcome {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 100%;
     display: flex;
     justify-content: start;
     text-align: center;
-    /* width: 40%; */
+    width: 40%;
     color: #c6979f;
   }
   .white-text {
@@ -64,7 +67,7 @@
   }
   .details {
     /* padding-left: 3rem; */
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
     text-align: right;
     display: flex;
@@ -102,7 +105,7 @@
     display: flex;
     justify-content: start;
     text-align: center;
-    width: 30%;
+    /* width: 30%; */
     color: #c6979f;
   }
   .white-text {
