--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -45,7 +45,8 @@
     padding: 10px 0 20px;
     font-size: 14px;
     font-weight: 400;
-    text-align: justify;
+    /* text-align: justify; */
+    text-align: left;
     line-height: 150%;
   }
   .button {
@@ -364,7 +365,7 @@
     font-size: 20px;
     color: #111;
     line-height: 150%;
-    text-align: justify;
+    /* text-align: justify; */
     font-weight: 400;
   }
   .secondary-button {
@@ -379,10 +380,10 @@
   }
   .secondary-paragraph.coloured-padding {
     padding: 0px !important;
-    text-align: justify !important;
+    /* text-align: justify !important; */
   }
   .content-answer {
-    text-align: justify;
+    /* text-align: justify; */
   }
 }
 /* Smooth transition for answer */
