--- a/src/components/floater/floater.css
+++ b/src/components/floater/floater.css
@@ -5,8 +5,9 @@
   color: white;
   border: none;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  /* width: 50px;
+  height: 50px; */
+  padding: 4px;
   font-size: 20px;
   cursor: pointer;
   display: flex;
@@ -43,8 +44,8 @@
   transform: translateY(0);
 }
 .toggle-btn img {
-  width: 24px;
-  height: 24px;
+  width: 40px;
+  height: 40px;
   object-fit: contain;
 }
 
