--- a/src/components/timerHome/timerHome.css
+++ b/src/components/timerHome/timerHome.css
@@ -693,6 +693,7 @@
     grid-template-rows: repeat(3, auto);
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+    margin-bottom: 12px;
   }
 
   .col-grid div {
